[gd_scene load_steps=6 format=3 uid="uid://kfumkorx1jpo"]

[ext_resource type="Script" uid="uid://be1svnaok8mxh" path="res://Player/scripts/health_bar.gd" id="1_gbjmv"]
[ext_resource type="Texture2D" uid="uid://keb186h0kgl2" path="res://assets/Player/Health_bar/health_bar_display_damage.png" id="1_jrou0"]
[ext_resource type="Texture2D" uid="uid://dj2cxr8j332t3" path="res://assets/Player/Health_bar/health_bar_background.png" id="2_wujnp"]
[ext_resource type="Texture2D" uid="uid://cexj20a43m407" path="res://assets/Player/Health_bar/health_bar_effective_health.png" id="3_jah34"]
[ext_resource type="Texture2D" uid="uid://5wqdnpsdxde1" path="res://assets/Player/Health_bar/health_bar_front.png" id="4_x057u"]

[node name="HealthBar" type="Control"]
layout_mode = 3
anchors_preset = 0
scale = Vector2(4, 4)
script = ExtResource("1_gbjmv")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 115.0
offset_bottom = 15.0
texture = ExtResource("2_wujnp")

[node name="DamageDisplay" type="NinePatchRect" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 14.0
offset_top = 6.0
offset_right = 114.0
offset_bottom = 9.0
texture = ExtResource("1_jrou0")
patch_margin_left = 2
patch_margin_right = 3

[node name="HealthDisplay" type="NinePatchRect" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 14.0
offset_top = 6.0
offset_right = 114.0
offset_bottom = 9.0
texture = ExtResource("3_jah34")
patch_margin_left = 2
patch_margin_right = 3

[node name="Forground" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 115.0
offset_bottom = 15.0
texture = ExtResource("4_x057u")

[node name="DamageTimer" type="Timer" parent="."]
unique_name_in_owner = true
one_shot = true

[connection signal="timeout" from="DamageTimer" to="." method="_on_damage_timer_timeout"]
